# weekability

./: .env  .gitignore  README.md  biome.json  bun.lockb  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241013034630_initial_migration.sql  20241016042824_initial_migration.sql  20241017050016_initial_migration.sql  20241020173330_initial_migration.sql  20241028005559_initial_migration.sql
src-tauri/src/: db.rs  db_conn.rs  lib.rs  schema.rs
src-tauri/src/db/: account.rs  accounts.rs  categories.rs  schema.rs  transactions.rs
src/components/: add-accounts.tsx  app-sidebar.tsx  chart-test.tsx  csv-importer.tsx  nav-main.tsx  team-switcher.tsx  theme-toggle.tsx
src/components/forms/: account-form.tsx  category-form.tsx  transaction-form.tsx
src/components/ui/: calendar.tsx  chart.tsx  dialog.tsx  form.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  toaster.tsx  tooltip.tsx
src/forms/: account-form.tsx
src/lib/: db.ts  types.ts
src/routes/: __root.tsx  accounts.tsx  categories.tsx  dashboard.tsx  index.tsx  investments.tsx  settings.categories.tsx  settings.tsx  transactions.tsx
