[package]
name = "weekability"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["postgres", "sqlite"] }
sqlx = { version = "0.8.2", features = ["time", "rust_decimal", "runtime-tokio-rustls"] }
time = { version = "0.3.36", features = ["serde"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
tokio = "1.40.0"
dotenv = "0.15.0"
anyhow = "1.0.91"
